--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ dev master ]
+    branches: [ dev, master ]
   pull_request:
-    branches: [ dev master ]
+    branches: [ dev, master ]
 
 jobs:
 
